attempt 2 fixed email link on mobile

--- a/style.css
+++ b/style.css
@@ -1892,6 +1892,10 @@ img.option-img {
 	padding:0px;
 }
 
+.z-index-1{
+	z-index: 1;
+}
+
 .mu-contact-area {
 	display: inline;
 	float: left;
